 * Fix #4056: Displaying/Reporting Issue -> Application Warning - lang_exists() missing arg 2 (vboctor)
 * Fix #4064: Links are not hyperlinked property if containing () (vboctor)
 * Fix #4065: Issues are not hyperlinked in Changelog if $g_bug_link_tag is not # (vboctor).
 * Fix #4081: mantis_upgrade_table.upgrade_id too small (vboctor).
 * New Config: fallback_language (default 'english') - Fallback language for automatic language selection.
 * New Config: status_enum_workflow (default disabled) - Defines the workflow to indicate what are the possible statuses based on the current one.
 * Updated German, Italian, Russian, Czech and Brazilian Portuguese languages.

2004.07.07  -  0.19.0a1

This is an alpha version of 0.19.0, it is not recommended for production use.  Users are encouraged to test it on a backup copy of their data and provide feedback to development team.

Users installing Mantis for the first time should sql/db_generate.sql to create the database, then run the http://www.example.com/mantis/admin and run the upgrade scripts.  Already existing users will need to backup their database, then run upgrade.

 * Enh #0000: Change of terminology, replaced "bug" with "issue" [first step in #2710].
 * Enh #0000: Generate one email per user. Stage #2 (minor send mail optimization - used kept alive SMTP connection).
 * Enh #0000: phpMailer 1.71 has been included to Mantis distribution, all the mails are sent now only by phpMailer.
 * Enh #0000: Mass issue manipulation (move, delete, etc.) page now shows list of selected issues.
 * Enh #2200: Add Version to simple bug pages.
 * Enh #3152: Adding notes and documents to resolved bugs.
 * Enh #3164: Added "fixed in version" field, set when resolving a bug.
 * Enh #3300: Add global defaults for priotity and severity of new bugs.
 * Enh #3302: Add global defaults for view state.
 * Enh #3505: Add a Bugnote to a resolved bug.
 * Enh #3519: Advanced filtering with multiple selections.